# airplanemode

./: .gitignore  README.md  airplanemode  pyproject.toml  setup.cfg  setup.py
airplanemode/: cli.py
script/: build.py  fmt.py  run.py  setup.py  test.py
src/airplanemode/: __init__.py  __main__.py  cli.py  version.py
tests/: test_airplanemode.py  test_codebase.py
