[metadata]
name = airplanemode
version = attr: airplanemode.__version__
author = Bob Gardner
author_email = bob.hn.gardner@gmail.com
description = Quickly enable/disable networking and background apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rgardner/airplanemode
project_urls =
    Bug Tracker = https://github.com/rgardner/airplanemode/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    airplanemode = airplanemode.cli:main

[options.extras_require]
tests =
    black==22.3.0
    isort==5.10.1
    mypy==0.942
    pylint==2.13.5
    pytest==7.1.1

[options.packages.find]
where = src
